add-exports for JDK17 and above, default to 1.19.2 of GJF, fix deprecations